# sae_single_repo

./: .gitignore  BluePrint SEA.drawio  README.md  a.txt  author_detection_model.ipynb  docker-compose.deploy.yml  docker-compose.yml  grid_search.ipynb  paragraphisation.ipynb
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/AI_engine/: pyproject.toml
backend/AI_services/: pyproject.toml
backend/AI_services/ai_services/: interfaces.py  preprocessing.py  processing.py  response.py  sentence.py  typing.py  utils.py  vector_storage.py
backend/AI_services/ai_services/corpus_tools/: cleaning.py
backend/AI_services/ai_services/models/: coref.py  explanation.py  fact_checker.py
backend/AI_services/tests/: corpus_test.py
backend/auth/: main.py  pyproject.toml
backend/auth/auth/config/: cfg.py
backend/auth/auth/middlewares/: auto_refresh.py
backend/auth/auth/models/: token.py  users.py
backend/auth/auth/routers/: routers.py
backend/auth/auth/services/: services.py
backend/database/: __init__.py  pyproject.toml
backend/database/database/: __init__.py  main.py
backend/database/database/alembic/: env.py
backend/database/database/alembic/versions/: 56bf3faaeaf5_completely_changing_pattern_of_models.py  708db6f21113_initial_migration.py  89b06bdd11fd_init_tables.py  9cfb078c7d18_deleting_unused_tables.py  a65c795405b5_add_password_column_to_users.py
backend/database/database/dao/: __init__.py  document.py  document_chapter.py  document_goal.py  document_section.py  error.py  project.py  project_chapter.py  project_goal.py  project_secsion.py  source_link.py  user.py  validation.py
backend/database/database/database/: base.py  database.py
backend/database/database/db/: base.py
backend/database/database/models/: document_chapters.py  document_goals.py  document_sections.py  documents.py  errors.py  project_chapters.py  project_goals.py  project_sections.py  projects.py  source_links.py  users.py  validations.py
backend/database/database/schemas/users/: request.py  responce.py
backend/database/database/services/: users.py
backend/document_crud/: pyproject.toml
backend/document_crud/document_crud/: .env_example.txt
backend/document_crud/document_crud/app/api/services/: validation.py
backend/document_crud/document_crud/app/core/: app.py  dao.py  types.py
backend/document_crud/document_crud/app/core/middlewares/: database.py
backend/documnet_crud/: .env_example.txt  pyproject.toml
backend/documnet_crud/documnet_crud/: main.py
backend/documnet_crud/documnet_crud/app/core/: types.py
backend/src/: .env_example.txt  alembic.ini  main.py
backend/src/AI_services/ai_services/: sentence.py  static.py  typing.py
backend/src/AI_services/ai_services/models/: explanation.py  fact_checker.py
backend/src/AI_services/tests/: test_cleaning.py
backend/src/app/api/routes/: __init__.py
backend/src/app/api/services/: document.py  validation.py
backend/src/app/auth/middlewares/: __init__.py  auto_refresh.py
backend/src/app/auth/models/: credentials.py  users.py
backend/src/app/auth/routers/: routers.py
backend/src/app/auth/services/: services.py
backend/src/app/core/: app.py  dao.py  types.py
backend/src/app/core/config/: api.py
backend/src/app/core/database/: connection.py
backend/src/app/core/middlewares/: __init__.py  database.py  dynamic_cors.py  user_id_setter.py
backend/src/app/core/permission/: __init__.py
backend/src/app/core/utils/: ai.py  validation.py
backend/src/migraions/: env.py
backend/src/migraions/versions/: 1071665e8274_status_id.py  2e83093a9331_user_external_id.py  344b7147624a_user_removed_pw.py  bc0168381367_validation.py  ca8f713eef0b_document_user_external_id.py
backend/src/scripts/: run.sh
frontend/: Dockerfile  (+3 more)
(+77 files in other folders)
