[tool.poetry]
name = "database"
version = "0.1.9"
description = ""
authors = ["bani2016up <bani2016up@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pydantic = {extras = ["email"], version = "^2.11.3"}
dotenv = "^0.9.9"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
asyncpg = "^0.30.0"
click = "^8.1.8"
greenlet = "^3.2.0"
typing-inspection = "^0.4.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
